--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -135,3 +135,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+  fonts:
+    - family: OpenSans
+      fonts:
+        - asset: assets/fonts/opensans/OpenSans-Regular.ttf
+        - asset: assets/fonts/opensans/OpenSans-Bold.ttf
